--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
 *{
@@ -7,7 +8,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Source Sans 3", sans-serif;
-  font-family: "Poetsen One", sans-serif;
+  /* font-family: "Poetsen One", sans-serif; */
+  /* font-family: "Bebas Neue", sans-serif; */
   font-style: normal;
 }
 
