--- a/src/Pages/Layout/Layout.module.css
+++ b/src/Pages/Layout/Layout.module.css
@@ -20,6 +20,7 @@
 }
 .PageContainer{
     width: 100%;
+    height: 100%;
     display: flex;
     overflow: auto;
     background-color: var(--bl);
