--- a/src/Pages/MainPage/MainPage.module.css
+++ b/src/Pages/MainPage/MainPage.module.css
@@ -4,7 +4,9 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    padding: 20px 15px;
+    padding: 0 15px;
+    padding-top: 150px;
+    padding-bottom: 20px;
 
 }
 
