--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -8,6 +8,11 @@
     padding: 10px 20px;
     /* min-height: 100px; */
     height: 100px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+   
 }
 
 .nav {
