--- a/src/Pages/MainPage/MainPage.module.css
+++ b/src/Pages/MainPage/MainPage.module.css
@@ -218,10 +218,10 @@
 .scrollDiv {
     width: 100%;
     display: flex;
-    height: 60vh;
+    height: 40vh;
     align-items: center;
     overflow: hidden;
-    margin: 50px 0;
+    /* margin: 50px 0; */
 
 
 }
