--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     flex-wrap: wrap;
     height: 100%;
-    gap: 30px;
+    gap: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +10,7 @@
 
 .projectBox:nth-child(even) {
     width: 100%;
-    height: 370px;
+    /* height: 350px; */
     /* border: 1px solid rgb(58, 58, 58); */
     display: flex;
     flex-direction: row-reverse;
@@ -20,7 +20,7 @@
 
 .projectBox:nth-child(odd) {
     width: 100%;
-    height: 370px;
+    height: 320px;
     /* border: 1px solid rgb(58, 58, 58); */
     display: flex;
     flex-direction: row;
@@ -31,14 +31,33 @@
 .proImg {
     width: 50%;
     height: 100%;
-    object-fit: cover;
-
+    position: relative;
+    transition: 0.8s ease-in-out;
 }
 
 .proImg img {
     width: 100%;
     height: 100%;
+    object-fit: fill;
+    border-radius: 10px;
+    cursor: pointer;
 
+
+}
+
+.proImg .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background: #65998b6e;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
+.proImg:hover .overlay {
+    display: none;
 }
 
 .proContent {
@@ -69,11 +88,13 @@
     color: var(--col);
     text-decoration: none;
 }
+
 .proContent>div a:hover {
     -webkit-text-stroke: 1px var(--og);
     color: var(--col);
     text-shadow: 0 0 5px var(--og);
 }
+
 .proContent>div a:hover svg {
     color: var(--col);
 }
