--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     flex-wrap: wrap;
     height: 100%;
-    gap: 100px;
+    /* gap: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +11,6 @@
 .projectBox:nth-child(even) {
     width: 100%;
     /* height: 350px; */
-    /* border: 1px solid rgb(58, 58, 58); */
     display: flex;
     flex-direction: row-reverse;
     gap: 20px;
@@ -21,7 +20,6 @@
 .projectBox:nth-child(odd) {
     width: 100%;
     height: 320px;
-    /* border: 1px solid rgb(58, 58, 58); */
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -32,7 +30,6 @@
     width: 50%;
     height: 100%;
     position: relative;
-    transition: 0.8s ease-in-out;
 }
 
 .proImg img {
@@ -41,7 +38,6 @@
     object-fit: fill;
     border-radius: 10px;
     cursor: pointer;
-
 
 }
 
@@ -58,6 +54,11 @@
 
 .proImg:hover .overlay {
     display: none;
+
+}
+.proImg:hover {
+    box-shadow: 0 0 15px 1px var(--og);
+    border-radius: 8px;
 }
 
 .proContent {
@@ -105,7 +106,6 @@
 }
 
 .proContent>div span {
-
     color: var(--col);
 }
 
