--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -153,11 +153,11 @@
 
 
 footer {
-    width: 100%;
-    display: flex;
+    /* width: 100%; */
+    /* display: flex;
     align-items: center;
     justify-items: center;
-    height: 100%;
+    height: 100%; */
     position: relative;
 
 }
@@ -165,22 +165,31 @@ footer {
 footer p {
     color: var(--col);
     width: 100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 footer::before {
     content: '';
     position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: -5px;
-    background-color: #3f4852;
-    width: 80%;
+    top: 12px;
+    background-color:var(--og);
+    width: 100%;
     border-radius: 30px;
-    height: 1px;
+    height: 2px;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate(60%, 0);
+}
+footer::after {
+    content: '';
+    position: absolute;
+
+    top: 12px;
+    background-color:var(--og);
+    width: 100%;
+    border-radius: 30px;
+    height: 2px;
+    right: 110%;
 }
 
 
