--- a/src/Pages/ContactMe/ContactMe.module.css
+++ b/src/Pages/ContactMe/ContactMe.module.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
     margin-top: 50px;
     margin-bottom: 80px;
     /* background: rgb(221, 161, 161); */
@@ -28,7 +28,12 @@
 }
 
 .getInTouch>div>h1 {
+    color: var(--col);
+}
+.getInTouch>div>h1 span {
     color: var(--og);
+    font-size: 30px;
+    font-weight: 400;
 }
 
 .getInTouch>div>span {
