--- a/src/Pages/MainPage/MainPage.module.css
+++ b/src/Pages/MainPage/MainPage.module.css
@@ -58,7 +58,7 @@
 
 .Heading>h1 {
     font-size: 100px;
-    color: var(--col);
+    color: var(--nameCol);
     line-height: 100px;
     font-family: "Source Sans 3", sans-serif;
 
@@ -144,12 +144,10 @@
 
 
 .Profile:hover .FirstImg {
-    /* display: none; */
     opacity: 0;
 }
 
 .Profile:hover .SecondImg {
-    /* display: block; */
     opacity: 1;
     border-radius: 10px;
 }
@@ -160,148 +158,21 @@
 /* ------------------------------------------------------------------------------------------------- */
 
 
-
-.aboutContainer {
+.contain1{
     width: 100%;
-    /* height: 100%; */
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    align-items: center;
-    justify-content: center;
+    padding-top: 50px;
 }
-
-.information {
+.contain2{
     width: 100%;
+    padding-top: 100px;
+    height: 100%;
+}
+.contain3{
     display: flex;
-    gap: 50px;
-    align-items: center;
+    width: 100%;
+    padding: 15px 20px;
     justify-content: space-between;
-}
-
-.information .picture {
-    position: relative;
-    width: 80%;
-    display: flex;
     align-items: center;
-    object-fit: fill;
-}
-
-.information .picture img {
-    width: 100%;
-    height: 450px;
-    border-radius: 8px;
-}
-
-.information .picture .overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 60%;
-    background: linear-gradient(to left, rgba(29, 29, 29, 1), rgba(0, 0, 0, 0));
-    border-radius: 8px;
-    pointer-events: none;
-}
-
-.information .info {
-    position: absolute;
-    right: -20%;
-    display: flex;
-    flex-direction: column;
     gap: 10px;
-    width: 40%;
-    color: var(--col);
-    font-family: "Source Sans 3", sans-serif;
-}
-
-.information .info h1 span {
-    color: var(--og);
-}
-
-.information .info p span {
-    color: var(--og);
-    font-weight: 600;
-}
-
-/* ------------------------- */
-
-.scrollDiv {
-    width: 100%;
-    display: flex;
-    height: 40vh;
-    align-items: center;
-    overflow: hidden;
-    /* margin: 50px 0; */
-
-
-}
-
-.scroll {
-    display: flex;
-    flex-direction: column;
-    white-space: nowrap;
-    gap: 70px;
-}
-
-.scroll div {
-    display: flex;
-    /* gap: 2em; */
-}
-
-.scroll p {
-    font-size: 5em;
-    color: var(--col);
-    font-weight: 600;
-    margin-bottom: 0;
-    line-height: 10px;
-    text-transform: uppercase;
-
-}
-
-.RightToLeft {
-    animation: RightToLeft 10s linear infinite;
-}
-
-.RightToLeft p {
-    -webkit-text-stroke: 1px var(--col);
-    color: transparent;
-    font-family: "Bebas Neue", sans-serif;
-    letter-spacing: 7px;
-
-}
-
-@keyframes RightToLeft {
-    from {
-        transform: translateX(0%);
-    }
-
-    to {
-        transform: translateX(-50%);
-    }
-}
-
-.LeftToRight {
-    animation: LeftToRight 10s linear infinite;
-    color: var(--og);
-}
-
-.LeftToRight p {
-    -webkit-text-stroke: 1px var(--og);
-    color: transparent;
-    font-family: "Bebas Neue", sans-serif;
-    letter-spacing: 7px;
-
-
-
-}
-
-@keyframes LeftToRight {
-    from {
-        transform: translateX(-50%);
-    }
-
-    to {
-        transform: translateX(0%);
-    }
+    margin: 100px 0;
 }
