--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -1,16 +1,37 @@
 .ProjectsDiv {
     width: 100%;
     flex-wrap: wrap;
-    height: 100%;
-    /* gap: 10px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:40px;
+}
+.projectDivs {
+    width: 100%;
+    flex-wrap: wrap;
+    gap:90px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.ProjectsDiv>.info {
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+.ProjectsDiv .info>h1 {
+    color: var(--col);
+}
+.ProjectsDiv .info h1 span {
+    color: var(--og);
+    font-size: 30px;
+    font-weight: 400;
+}
+
 
 .projectBox:nth-child(even) {
     width: 100%;
-    /* height: 350px; */
     display: flex;
     flex-direction: row-reverse;
     gap: 20px;
