--- a/src/Pages/ContactMe/ContactMe.module.css
+++ b/src/Pages/ContactMe/ContactMe.module.css
@@ -48,7 +48,7 @@
     font-weight: 600;
 }
 
-.getInTouch>div>button {
+.getInTouch>div>a {
     width: max-content;
     margin: 20px 0;
     height: 50px;
@@ -68,9 +68,10 @@
     font-family: "Source Sans 3", sans-serif;
     cursor: pointer;
     transition: 0.4s ease-in-out;
+    text-decoration: none;
 }
 
-.getInTouch>div>button:hover {
+.getInTouch>div>a:hover {
     box-shadow: 0 0 10px var(--og);
     text-shadow: 0 0 5px var(--og);
     background-color: var(--og);
