--- a/src/Pages/MainPage/MainPage.module.css
+++ b/src/Pages/MainPage/MainPage.module.css
@@ -3,11 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    padding: 0 15px;
-    padding-top: 150px;
-    padding-bottom: 20px;
-
+    padding:0 10px;
 }
 
 .innerConainers {
@@ -15,12 +11,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 100%;
-    max-height: 100%;
-    padding: 20px 15px;
-    gap: 100px;
-
+    width: 80%;
+    max-width: 1400px;
 }
 
 
@@ -29,20 +21,19 @@
 .MainPageDiv {
     display: flex;
     width: 100%;
-    /* height: 800px; */
-    padding: 15px 20px;
+    height: 100vh;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    margin: 50px 0;
+   margin-top: 50px;
 }
 
 .Heading {
     display: flex;
     width: 60%;
+    min-width: 300px;
     gap: 10px;
     flex-direction: column;
-    /* padding: 15px 20px; */
     font-family: "Source Sans 3", sans-serif;
 }
 
@@ -93,55 +84,45 @@
     border: none;
     background-color: var(--bl);
     border:1px solid var(--og);
-    /* background-color: var(--og); */
     color: var(--col);
     font-family: "Source Sans 3", sans-serif;
     cursor: pointer;
     transition: 0.4s ease-in-out;
-
 }
 
 .Heading>button:hover {
     box-shadow: 0 0 10px var(--og);
     text-shadow: 0 0 5px var(--og);
     background-color: var(--og);
-
 }
-
-
 
 .Profile {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 40%;
-    object-fit: cover;
+    min-width: 300px;
     position: relative;
-
+    height: 500px;
 }
 
 .Profile img {
-    width: 100%;
-    height: 500px;
     object-fit: cover;
+    width: 100%;
+    height: 100%;
     transition: opacity 0.6s ease-in-out;
     position: absolute;
     cursor: pointer;
-
 }
 
 .Profile .FirstImg {
-    /* display: block; */
     opacity: 1;
     filter: drop-shadow(0 0 5px var(--col));
 }
 
 .Profile .SecondImg {
-    /* display: none; */
     opacity: 0;
-
 }
-
 
 .Profile:hover .FirstImg {
     opacity: 0;
@@ -153,7 +134,32 @@
 }
 
 
-
+@media screen and (max-width:786px) {
+    .MainPageDiv{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .Heading{
+        width: 80%;
+    }
+    .Profile{
+        display: none;
+    }
+    .Heading>h1 {
+        font-size: 50px;
+        line-height: 50px;
+    }
+    
+    .Heading>h3 {
+        font-size: 20px;
+    }
+    
+    .Heading>h3 span {
+        font-size: 25px;
+  
+    }
+}
 
 /* ------------------------------------------------------------------------------------------------- */
 
