--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,8 +5,6 @@
     background-color: var(--bl);
     align-items: center;
     justify-content: center;
-    padding: 10px 20px;
-    /* min-height: 100px; */
     height: 100px;
     position: fixed;
     top: 0;
@@ -21,18 +19,18 @@
 }
 .nav {
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 100%;
-    /* max-width: 1400px; */
+    padding:10px 35px;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
 }
 
 .links {
     display: flex;
     align-items: center;
     width: 500px;
+    max-width: 500px;
     justify-content: space-between;
 }
 
@@ -40,6 +38,7 @@
     list-style: none;
     color: var(--col);
     font-size: 15px;
+    font-weight: 600;
     padding: 5px;
     min-width:80px;
     text-align: center;
@@ -60,8 +59,10 @@
 
 .logo {
     display: flex;
-    width: auto;
-    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    width: 70px;
+    height: 70px;
     object-fit: cover;
 }
 
@@ -90,4 +91,25 @@
     box-shadow: 0 0 10px var(--og);
     text-shadow: 0 0 5px var(--og);
 
+}
+
+@media screen and (max-width:786px) {
+    .container {
+        height:150px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+    .links button{
+       display: none;
+     }
+     .links{
+        width: 100%;
+       display: flex;
+       justify-content: space-around;
+       align-items: center;
+    }
 }
