--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -8,73 +8,62 @@
 }
 
 .MainDiv .Content {
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
     height: 100%;
-
 }
 
-.Content>a {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.mail {
     text-decoration: none;
     transform: rotate(360deg);
     font-weight: 600;
     letter-spacing: 2px;
     color: var(--col);
-    position: absolute;
-    bottom: 25%;
+    font-size: 13px;
     cursor: pointer;
 }
 
-.Content a:hover {
+.mail:hover {
     color: var(--hov);
 }
 
 .MainDiv>.Content::after {
     position: absolute;
     content: '';
-    width: 1px;
-    height: 150px;
+    width: 1.6px;
+    height: 120px;
     border-radius: 30px 30px 0 0;
     background-color: var(--col);
     bottom: 0;
 }
+
 .Links {
     position: absolute;
-    bottom: 25%;
+    bottom: 20%;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 15px;
 }
 
 
-.icons
-{
-    width: 35px;
-    height: 35px;
-     padding: 5px 0;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     text-decoration: none;
+.icons {
+    width: 30px;
+    height: 30px;
+    padding: 5px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 
 }
 
-.icons>svg
-{
+.icons>svg {
     width: 100%;
     height: 100%;
     color: var(--col);
 }
-.icons>svg:hover
-{
 
+.icons>svg:hover {
     color: var(--og);
 }
