--- a/src/Pages/AboutMe/AboutMe.module.css
+++ b/src/Pages/AboutMe/AboutMe.module.css
@@ -1,7 +1,6 @@
-
-
 .aboutContainer {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -12,6 +11,7 @@
 
 .information {
     width: 100%;
+    height: 100%;
     display: flex;
     gap: 50px;
     align-items: center;
@@ -28,7 +28,8 @@
 
 .information .picture img {
     width: 100%;
-    height: 450px;
+    height: auto;
+    max-height: 450px;
     border-radius: 8px;
 }
 
@@ -53,8 +54,9 @@
     color: var(--col);
     font-family: "Source Sans 3", sans-serif;
 }
-.information .info>h1{
-   color: var(--col);
+
+.information .info>h1 {
+    color: var(--col);
 }
 
 .information .info h1 span {
@@ -73,12 +75,9 @@
 .scrollDiv {
     width: 100%;
     display: flex;
-    height: 40vh;
+    height: 300px;
     align-items: center;
     overflow: hidden;
-    /* margin: 50px 0; */
-
-
 }
 
 .scroll {
@@ -144,8 +143,52 @@
     from {
         transform: translateX(-50%);
     }
-
+    
     to {
         transform: translateX(0%);
     }
+}
+
+
+@media screen and (max-width:786px) {
+    .aboutContainer {
+       width: 100%;
+       height:60vh;
+       padding-top: 0;
+       gap: 10px;
+    }
+    .information .picture {
+        width: 100%;
+    }
+    .information .picture img {
+        display: none;
+    }
+    .information .info {
+        position: absolute;
+        right: 0;
+        width: 100%;
+    }
+    .information .info>h1 {
+        font-size: 25px;
+    }
+
+    .information .info h1 span {
+        font-size: 22px;
+    }
+
+    .information .info p {
+        font-size: 14px;
+    }
+    .scrollDiv {
+       height: 200px;
+    }
+    
+    .scroll {
+        gap: 30px;
+    }
+
+    .scroll p {
+        font-size: 1.8em;
+    }
+
 }
