--- a/src/Pages/ContactMe/ContactMe.module.css
+++ b/src/Pages/ContactMe/ContactMe.module.css
@@ -3,10 +3,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     /* height: 100vh; */
     margin-top: 50px;
     margin-bottom: 80px;
     /* background: rgb(221, 161, 161); */
+    padding: 0;
 }
 
 .getInTouch {
@@ -76,4 +78,36 @@
     text-shadow: 0 0 5px var(--og);
     background-color: var(--og);
 
+}
+
+
+@media screen and (max-width:786px) {
+    
+    .getInTouch>div>h1 {
+        font-size: 25px;
+    }
+    .getInTouch>div>h1 span {
+        font-size: 22px;
+    }
+    
+    .getInTouch>div>span {
+        font-size: 2.5rem;
+    }
+    
+    .getInTouch>div>p {
+        font-size: 14px;
+        font-weight: 600;
+        text-align: center;
+    }
+    
+    .getInTouch>div>a {
+        width: max-content;
+        margin: 10px 0;
+        height: 30px;
+        font-size: 14px;
+        padding: 0 15px;
+    }
+    .footerContainer>.Links{
+     width: 100%;
+    }
 }
