--- a/src/Pages/Layout/Layout.module.css
+++ b/src/Pages/Layout/Layout.module.css
@@ -37,3 +37,12 @@
     z-index: 999;
 }
 
+@media screen and (max-width:786px) {
+    .LeftSide {
+       display: none;
+    }
+    .RightSide {
+        display: none;
+
+    }
+}
