--- a/src/Pages/MainPage/MainPage.module.css
+++ b/src/Pages/MainPage/MainPage.module.css
@@ -113,7 +113,13 @@
     transition: opacity 0.6s ease-in-out;
     position: absolute;
     cursor: pointer;
+    /* border-radius: 8px;
+    filter: grayscale(1);
+    transition: 0.3s ease-in-out; */
 }
+/* .Profile img:hover{
+    filter: none;
+} */
 
 .Profile .FirstImg {
     opacity: 1;
