--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -14,6 +14,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.6s ease-in-out;
+
 }
 
 .ProjectsDiv>.info {
@@ -40,6 +42,7 @@
     flex-direction: row-reverse;
     gap: 20px;
     justify-content: space-between;
+    transition: all 0.6s ease-in-out;
 }
 
 .projectBox:nth-child(odd) {
@@ -48,6 +51,7 @@
     flex-direction: row;
     gap: 20px;
     justify-content: space-between;
+    transition: all 0.6s ease-in-out;
 }
 
 .proImg {
@@ -151,11 +155,13 @@
     padding: 5px 10px;
     border-radius: 6px;
     color: var(--col);
+    /* cursor: pointer; */
 }
 
 .proContent>div ul li:hover {
     border: 1px solid var(--og);
-    background-color: var(--og);
+    /* background-color: var(--og); */
+    color: var(--og);
 
 }
 
